force-app/main/default/objects/Order/fields/Maintenance_Date__c.field-meta.xml
<CustomField>
        <fullName>Maintenance_Date__c</fullName>
        <label>Maintenance Date</label>
        <type>Date</type>
    </CustomField>