force-app/main/default/objects/Order/fields/New_Maintenance__c.field-meta.xml
<CustomField>
        <fullName>New_Maintenance__c</fullName>
        <description>New Maintenance amount on this order</description>
        <label>New Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>