force-app/main/default/objects/Order/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>Mirror of Quote.Quote_Type__c for Context Definition pricing resolution.</description>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Net-New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>