force-app/main/default/objects/Order/fields/Renewal_Maintenance_Quote__c.field-meta.xml
<CustomField>
        <fullName>Renewal_Maintenance_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Maintenance Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Orders (Renewal Maintenance Quote)</relationshipLabel>
        <relationshipName>RenewalMaintenanceQuoteOrders</relationshipName>
        <type>Lookup</type>
    </CustomField>